test/fail/ifnobool.app
// should be of type Bool

application test

section functions

globals {
  function do() {
    if ("no bool") {
      var a : String := "dinges";
    }
  }
}